Bug 1455944 - Do not paint nsDisplayOpacity children when opacity push/pop markers have empty paint rect r=mattwoodrow

MozReview-Commit-ID: 5BgHOFjW34H

--HG--
extra : rebase_source : 0fc76b610ee3149c525e342988fac5b5028feeeb